OnboardingV2Minimal/force-app/main/default/objects/FollowUpRetryTrigger__e/FollowUpRetryTrigger__e.object-meta.xml
<CustomObject>
    <description
  >Platform Event that triggers retry processing for failed Follow_Up_Queue__c records. Published when a follow-up message fails and needs to be retried at a later time, enabling asynchronous retry scheduling. Example: When a Follow_Up_Queue record with Status__c=&quot;Failed&quot; and Next_Attempt_Date__c set to a future date needs to be retried, a FollowUpRetryTrigger__e event is published with Follow_Up_Queue_Id__c pointing to the queue record, Next_Retry_Date__c indicating when to retry, and Retry_Attempt_Number__c tracking the attempt count. A platform event subscriber (Flow or Apex) listens for these events and processes the retry at the scheduled time. This decouples retry scheduling from immediate processing and enables scalable retry management. The event is published after commit (PublishAfterCommit) to ensure data consistency.</description>
    <label>Follow Up Retry Trigger</label>
    <pluralLabel>Follow Up Retry Triggers</pluralLabel>
</CustomObject>