OnboardingV2Minimal/force-app/main/default/objects/FollowUpRetryTrigger__e/fields/Follow_Up_Queue_Id__c.field-meta.xml
<CustomField>
    <fullName>Follow_Up_Queue_Id__c</fullName>
    <label>Follow Up Queue Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>