OnboardingV2Minimal/force-app/main/default/objects/FollowUpRetryTrigger__e/fields/Next_Retry_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Retry_Date__c</fullName>
    <label>Next Retry Date</label>
    <type>DateTime</type>
</CustomField>