OnboardingV2Minimal/force-app/main/default/objects/FollowUpRetryTrigger__e/fields/Retry_Attempt_Number__c.field-meta.xml
<CustomField>
    <fullName>Retry_Attempt_Number__c</fullName>
    <label>Retry Attempt Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>